--- a/assets/style.css
+++ b/assets/style.css
@@ -27,6 +27,7 @@ i {
 
 img {
     max-width: 100%;
+
 }
 
 /*  #endregion utilities */
@@ -37,6 +38,7 @@ header {
     padding: 0.5rem;
     justify-content: flex-end;
     align-items: center;
+    height: 50px;
 }
 
 .speaker-view {
@@ -47,7 +49,7 @@ header {
 }
 
 .speaker-view i {
-    padding-right: 5px;
+    padding: 5px;
 }
 
 header i:nth-child(2) {
@@ -62,7 +64,12 @@ header i:nth-child(2) {
 /* #endregion header */
 
 /*  #region main */
-main {}
+main {
+    height: calc(100vh - 50px - 80px);
+    /* ------------------------------------------------------------------------------------------togliere i px del footer */
+    overflow: scroll;
+    /* questo fa apparire la barra solo qua */
+}
 
 .all-thumbs {
     justify-content: space-evenly;
@@ -73,10 +80,9 @@ main {}
     position: relative;
     justify-content: flex;
     padding: 5px;
-
+    width: 200px;
 }
 
-.user img {}
 
 .speaker {
     position: absolute;
@@ -93,3 +99,11 @@ main {}
 /*  #endregion main */
 
 /* #region */
+
+/* #region footer */
+footer {
+    width: 100%;
+    height: 80px;
+}
+
+/* #endregion footer */
